3.Semantic.Analysis/test/semanal/error/error4_1_6.mod
module index;

var a : integer;

procedure f();
begin
//    a[3] := 5
end f;

begin
    a[6] := true
end index.
